🐛  FIX: minor title fix on small mobile screens

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -151,7 +151,7 @@ button:active {
 
 @media only screen and (max-width: 500px) {
     .pageTitle {
-        font-size: 32px;
+        font-size: 31px;
     }
 
     .center {
